# aiogram_django_template

./: .env.dist  .flake8  .gitignore  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
backend/: .env.dist  Dockerfile  Dockerfile.prod  Makefile  entrypoint.prod.sh  manage.py  pyproject.toml  requirements.txt
backend/core/: settings.py  urls.py
backend/core/settings/: common.py  develop.py  production.py
backend/fixtures/: data.json
backend/telegram/: admin.py  filters.py  models.py  paginations.py  serializers.py  tests.py  urls.py  views.py
backend/telegram/migrations/: 0001_initial.py  0002_remove_telegramuser_deep_link.py  0003_alter_telegramuser_user_id.py
backend/tests/: base.py  test_api.py
nginx/: nginx.conf
redis/: Dockerfile  README.md  init.setup.sh  redis.conf
redis/data/: README.md
telegram_bot/: .env.dist  Dockerfile  auth.py  loader.py  main.py  pyproject.toml  requests.py  requirements.txt  settings.py  utils.py
telegram_bot/handlers/: __init__.py  admin_handlers.py  default.py  exceptions.py  services.py
telegram_bot/handlers/admin/: __init__.py  block.py  message.py  user_detail.py  users.py
telegram_bot/keyboards/: inline.py
telegram_bot/requests/: __init__.py  users.py
