[tool.poetry]
name = "bot template"
version = "0.1.0"
description = "My template for creating bots with Django+DRF+Aiogram"
authors = ["https://github.com/itisnotyourenv"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
